--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,7 +1,7 @@
 {
     "generator-create-redux-app": {
       "promptValues": {
-        "authorName": "Beamery"
+        "authorName": "MMC"
       }
     }
 }
